[package]
name = "axmm"
version.workspace = true
edition.workspace = true
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "ArceOS virtual memory management module"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axmm"
documentation = "https://arceos-org.github.io/arceos/axmm/index.html"

[dependencies]
axhal = { workspace = true, features = ["paging"] }
axalloc = { workspace = true }
axconfig = { workspace = true }

log = { workspace = true }
axerrno = { workspace = true }
lazyinit = { workspace = true }
memory_addr = { workspace = true }
kspin = { workspace = true }
memory_set = "0.3"
