[package]
name = "axnet"
version.workspace = true
edition.workspace = true
authors = [
  "Yuekai Jia <equation618@gmail.com>",
  "ChengXiang Qi <kuangjux@outlook.com>",
]
description = "ArceOS network module"
license.workspace = true
homepage.workspace = true
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axnet"
documentation = "https://arceos-org.github.io/arceos/axnet/index.html"

[features]
smoltcp = []
default = ["smoltcp"]

[dependencies]
log = { workspace = true }
cfg-if = { workspace = true }
spin = "0.9"
lazyinit = { workspace = true }
axerrno = { workspace = true }
axio = { workspace = true }
axhal = { workspace = true }
axsync = { workspace = true }
axtask = { workspace = true }
axdriver = { workspace = true, features = ["net"] }
axdriver_net = { git = "https://github.com/arceos-org/axdriver_crates.git", tag = "v0.1.0" }

[dependencies.smoltcp]
git = "https://github.com/rcore-os/smoltcp.git"
rev = "2ade274"
default-features = false
features = [
  "alloc",
  "log",             # no std
  "medium-ethernet",
  "proto-ipv4",
  "socket-raw",
  "socket-icmp",
  "socket-udp",
  "socket-tcp",
  "socket-dns",
  # "fragmentation-buffer-size-65536", "proto-ipv4-fragmentation",
  # "reassembly-buffer-size-65536", "reassembly-buffer-count-32",
  # "assembler-max-segment-count-32",
]
